# NavelGazer

./: CMakeLists.txt  Makefile  Makefile.am  Makefile.am.common.inc  Makefile.in  README.md  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
client/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  NavelServer  config.status  configure  configure.ac
client/.deps/: main.Po
client/autom4te.cache/: requests  traces.1
doc/: design.txt
libnavel/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  concurrent.cpp  config.status  configure  configure.ac  ld.cpp  libtool  log.cpp  plugin.cpp  rtconfig.cpp
libnavel/.deps/: ld.Plo  log.Plo  plugin.Plo  rtconfig.Plo
libnavel/.libs/: libnavel.so.0  libnavel.so.0.0.0
libnavel/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
libnavel/include/: concurrent.hpp  exception.hpp  libloader.hpp  libloader_linux_impl.hpp  plugin.hpp  pluginfwd.hpp  rtconfig.hpp  string.hpp
libnavelpluginapi/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool  log.cpp  plugin_log.cpp
libnavelpluginapi/.deps/: log.Plo  plugin_log.Plo
libnavelpluginapi/.libs/: libnavelpluginapi.so.0  libnavelpluginapi.so.0.0.0
libnavelpluginapi/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
plugins/: CMakeLists.txt
server/: CMakeLists.txt  Makefile  Makefile.am  Makefile.am.common.inc  Makefile.in  NavelServer  config.status  configure  configure.ac  main.cpp  server_rtconfig.cpp
(+20 files in other folders)
